add sidebar with links

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+.sidebar {
+  position: absolute;
+  top: 0;
+  width: 170px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+
 #head-link ul {
   padding: 10% 0% 10%;
+}
+#main-logo {
+  width: 160px;
 }
